# Game

./: CMakeLists.txt  Creature.h  Enemy.h  Hero.h  Makefile  README.md  Warrior.cpp  Warrior.h  Weapon.cpp  Weapon.h  a.out  functions.h  input.cpp  main.cpp  rndWpn.cpp
src/: Creture.h  Enemy.h  Hitbox.h  main.cpp
src/engine/: '  common.h
